DATAGO-142122: Updated to JDK 11, modernized build and updated dependencies (#59)